# exchange-telegram-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
github/workflows/: ci.yml
src/posbot/: config.py  logger.py  main.py  models.py  provider.py  state_store.py  telegram_bot.py  watcher.py
tests/: test_crossing.py  test_watcher.py
